Skip second user's click if intro

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -90,7 +90,7 @@
         }
 
         $(document).bind(paella.events.loadComplete, function (event, params) {
-            {% if autostart is defined and autostart == 'true' %}
+            {% if intro or (autostart is defined and autostart == 'true') %}
                 setTimeout(function () {
                     paella.player.play();
                 }, 300);
