TTK-15237 muted intro if mobile device

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -113,6 +113,7 @@
             intro.id = "intro";
             intro.addEventListener('ended', onEndedVideo);
             intro.autoplay = "{{ autostart != 'false' }}";
+            intro.muted= base.userAgent.browser.IsMobileVersion;
 
             skipContainer.id = "skipContainer";
             introContainer.id = "introContainer";
