TTK-15448 change styles for footprints

--- a/Resources/public/paella/player/resources/style/style_dark.css
+++ b/Resources/public/paella/player/resources/style/style_dark.css
@@ -1871,3 +1871,6 @@ a:active {
   font-family: 'Istok Web', sans-serif;
   font-style: oblique;
 }
+.footPrintsContainer {
+  height: 60px !important;
+}
