--- a/Resources/public/paella/player/resources/style/style_light.css
+++ b/Resources/public/paella/player/resources/style/style_light.css
@@ -1871,3 +1871,6 @@ a:active {
   font-family: 'Istok Web', sans-serif;
   font-style: oblique;
 }
+.footPrintsContainer {
+  height: 60px !important;
+}
