TTK-15448 Not use Resources/public/paella
Resources/public/paella/ is only for original paella player assets.

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -32,6 +32,11 @@
        background: black;
        box-shadow: 0px 0px 6px #000;
    }
+
+   {# Teltek custom design #}
+   .footPrintsContainer {
+     height: 60px !important;
+   }
   </style>
 {% endblock %}
 
