--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -33,6 +33,14 @@
        box-shadow: 0px 0px 6px #000;
    }
 
+   {# Added while waiting for paella fix TTK-16366 #}
+   .captionsBar .editorButton {
+       display: none !important;
+   }
+   .captionsBar select {
+       width: 49% !important;
+   }
+
    {# Teltek custom design #}
    .footPrintsContainer {
      height: 60px !important;
