TTK-16133 Add logo parameter
"Mosca" for the paella player. Missing:

 * Dynamic and configurable player profiles.
 * Add logo in JWPlayerBundle

--- a/Resources/views/PaellaPlayer/player.html.twig
+++ b/Resources/views/PaellaPlayer/player.html.twig
@@ -20,9 +20,15 @@
             display: none;
         }
 
+        {% if logo is defined and logo %}
+        #paella_logo\.png {
+             content: url("{{ logo }}");
+        }
+        {% else %}
         #paella_logo\.png {
             display: none !important;
         }
+        {% endif %}
 
         {% if intro %}
             #introContainer {
