TTK-16059 Fix Scroll not working in touch devices

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -45,6 +45,11 @@
    .footPrintsContainer {
      height: 60px !important;
    }
+
+  {# touch scroll #305 and TTK-16059#}
+  body {
+    touch-action: auto !important;
+  }
   </style>
 {% endblock %}
 
