TTK-16763 Fix 'Search captions' input align

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -23,7 +23,7 @@
 {% endblock%}
 {% block stylesheets %}
 
-  <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.slate.min.css') }}" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/bootstrap/css/bootstrap.min.css') }}" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="{{ asset('bundles/pumukitpaellaplayer/paella/player/resources/style/style_dark.css') }}" id="paellaSkin" type="text/css" media="screen" title="no title" charset="utf-8">
 
   <style>
