TTK-16763 CaptionsPluginContainer not use 50%
Asked by Rafa

--- a/Resources/views/PaellaPlayer/index.html.twig
+++ b/Resources/views/PaellaPlayer/index.html.twig
@@ -46,6 +46,13 @@
      height: 60px !important;
    }
 
+   {# Added while waiting for paella fix TTK-16763 #}
+   .captionsPluginContainer {
+     max-width: 400px;
+     min-width: 200px;
+     width: 30vw !important;
+   }
+
   {# touch scroll #305 and TTK-16059#}
   body {
     touch-action: auto !important;
