Updated paella player with xapi

--- a/Resources/public/paella/player/resources/style/style_dark_small.css
+++ b/Resources/public/paella/player/resources/style/style_dark_small.css
@@ -33,6 +33,28 @@ div {
   -ms-user-select: none;
   user-select: none;
 }
+i.button-icon {
+  color: white;
+  font-size: 12px;
+  padding-left: 3px;
+  line-height: 20px;
+}
+.buttonPlugin {
+  position: relative;
+}
+.button-text {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  text-align: center;
+  line-height: 15px;
+}
+i.button-icon.icon-screen {
+  font-size: 14.64px;
+  padding-left: 0px;
+}
 #playerContainer {
   background-color: white;
 }
@@ -111,9 +133,9 @@ div {
   width: 20px;
   height: 20px;
   cursor: pointer;
-  background-image: url(../images/paella_icons_light.png);
-  background-size: 2000% 1000%;
-  background-position: 0px 0px;
+  /*background-image: @paella_icons_image;
+    background-size: @paella_icons_bkg_size;
+    background-position: 0px 0px;*/
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 0px;
@@ -556,40 +578,212 @@ a.btn {
   margin-bottom: -3px;
   margin-right: 2px;
 }
+@font-face {
+  font-family: 'icomoon';
+  src: url('fonts/icomoon.eot?1n9l1y');
+  src: url('fonts/icomoon.eot?1n9l1y#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf?1n9l1y') format('truetype'), url('fonts/icomoon.woff?1n9l1y') format('woff'), url('fonts/icomoon.svg?1n9l1y#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-mini-camera:before {
+  content: "\e900";
+}
+.icon-captions:before {
+  content: "\e901";
+}
+.icon-paintbrush:before {
+  content: "\e902";
+}
+.icon-airplay:before {
+  content: "\e903";
+}
+.icon-arrow-down:before {
+  content: "\e904";
+}
+.icon-arrow-left:before {
+  content: "\e905";
+}
+.icon-arrow-right:before {
+  content: "\e906";
+}
+.icon-arrow-up:before {
+  content: "\e907";
+}
+.icon-back-10-s:before {
+  content: "\e908";
+}
+.icon-back-30-s:before {
+  content: "\e909";
+}
+.icon-comments-disabled:before {
+  content: "\e90a";
+}
+.icon-comments:before {
+  content: "\e90b";
+}
+.icon-edit:before {
+  content: "\e90c";
+}
+.icon-facebook:before {
+  content: "\e90d";
+}
+.icon-folder:before {
+  content: "\e90e";
+}
+.icon-forward-30-s:before {
+  content: "\e90f";
+}
+.icon-frames:before {
+  content: "\e910";
+}
+.icon-fullscreen:before {
+  content: "\e911";
+}
+.icon-headphone:before {
+  content: "\e912";
+}
+.icon-help:before {
+  content: "\e913";
+}
+.icon-info:before {
+  content: "\e914";
+}
+.icon-link:before {
+  content: "\e915";
+}
+.icon-mini-frames:before {
+  content: "\e916";
+}
+.icon-mini-videocamera:before {
+  content: "\e917";
+}
+.icon-mini-window:before {
+  content: "\e918";
+}
+.icon-mini-zoom-in:before {
+  content: "\e919";
+}
+.icon-mini-zoom-out:before {
+  content: "\e91a";
+}
+.icon-pause:before {
+  content: "\e91b";
+}
+.icon-photo:before {
+  content: "\e91c";
+}
+.icon-pip:before {
+  content: "\e91d";
+}
+.icon-play:before {
+  content: "\e91e";
+}
+.icon-player-mode-1:before {
+  content: "\e91f";
+}
+.icon-player-mode-2:before {
+  content: "\e920";
+}
+.icon-player-mode-3:before {
+  content: "\e921";
+}
+.icon-present-mode-1:before {
+  content: "\e922";
+}
+.icon-present-mode-2:before {
+  content: "\e923";
+}
+.icon-present-mode-3:before {
+  content: "\e924";
+}
+.icon-present-mode-4:before {
+  content: "\e925";
+}
+.icon-present-mode-5:before {
+  content: "\e926";
+}
+.icon-present-mode-6:before {
+  content: "\e927";
+}
+.icon-present-mode-7:before {
+  content: "\e928";
+}
+.icon-present-mode-8:before {
+  content: "\e929";
+}
+.icon-present-mode-9:before {
+  content: "\e92a";
+}
+.icon-present-mode-10:before {
+  content: "\e92b";
+}
+.icon-presentation-mode:before {
+  content: "\e92c";
+}
+.icon-screen:before {
+  content: "\e92d";
+}
+.icon-slideshow:before {
+  content: "\e92e";
+}
+.icon-social:before {
+  content: "\e92f";
+}
+.icon-star-empty:before {
+  content: "\e930";
+}
+.icon-star:before {
+  content: "\e931";
+}
+.icon-stats:before {
+  content: "\e932";
+}
+.icon-twitter:before {
+  content: "\e933";
+}
+.icon-user:before {
+  content: "\e934";
+}
+.icon-volume-high:before {
+  content: "\e935";
+}
+.icon-volume-low:before {
+  content: "\e936";
+}
+.icon-volume-mid:before {
+  content: "\e937";
+}
+.icon-volume-mute:before {
+  content: "\e938";
+}
+.icon-windowed:before {
+  content: "\e939";
+}
+.icon-zoom-in:before {
+  content: "\e93a";
+}
+.icon-zoom:before {
+  content: "\e93b";
+}
 .buttonPlugin.flexSkip_Rewind_10 {
   background-position: -205% 22%;
 }
 .buttonPlugin.flexSkip_Forward_30 {
   background-position: -200% 22%;
-}
-.buttonPlugin.playlistPlugin {
-  background-position: -89.5% -89%;
-}
-.buttonPluginPopUp.playlistPlugin {
-  background-image: none;
-  min-width: 40px;
-  width: 500%;
-  min-height: 40px;
-  max-height: 150px;
-  overflow: auto;
-  text-align: left;
-}
-.buttonPluginPopUp.playlistPlugin .videobutton {
-  cursor: pointer;
-  text-align: left;
-  text-transform: capitalize;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-.buttonPluginPopUp.playlistPlugin .videobutton:hover {
-  background-color: #FF4C4C;
-}
-.buttonPluginPopUp.playlistPlugin .videobutton.playing {
-  font-style: italic;
-  font-weight: bold;
-  padding-left: 15px;
 }
 .buttonPlugin.arrowSlideNavidator.nextButton {
   background-position: -1500% -100%;
@@ -902,13 +1096,6 @@ textarea {
   overflow: hidden;
   display: inline-block;
 }
-.buttonPlugin.frameControl {
-  background-position: -1200% -100%;
-}
-/*
-.buttonPlugin.frameControl:hover {}
-.buttonPlugin.frameControl.selected {}
-*/
 .frameControlContainer {
   height: 87px;
   width: 90%;
@@ -1440,6 +1627,11 @@ svg rect {
   display: flex;
   justify-content: center;
 }
+/* The canvas "freeze frame" to overlay video element, instead of flex side aligned */
+.freezeFrame {
+  align-self: center;
+  position: absolute;
+}
 .videoZoomButton {
   z-index: 1;
   margin-left: 2px;
@@ -1477,12 +1669,6 @@ svg rect {
     width: 120px;
     height: 68px;
   }
-}
-.buttonPlugin.videoZoomToolbar {
-  background-position: -600% -100%;
-  font-size: 0.8em;
-  padding-top: 9px;
-  text-align: center;
 }
 .videoZoomToolbarItem {
   width: 30px;
@@ -1590,6 +1776,100 @@ svg rect {
 }
 .videoRangeContainer .range .image.slave {
   background-position: -740px 0px;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 18px 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-moz-focus-outer {
+  border: 0;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #cc0000;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 32px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -14px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #bb0000;
+  outline: none;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: #cc0000;
+  border-radius: 1.3px;
+  border: 0.2px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 32px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #cc0000;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 32px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #cc0000;
+  outline: none;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #cc0000;
+  outline: none;
 }
 .buttonPlugin.zoomButton {
   background-position: -280px -40px;
