TTK-16012: Added profile folder field to dynamic configuration file

--- a/Resources/views/Conf/conf.json.twig
+++ b/Resources/views/Conf/conf.json.twig
@@ -58,7 +58,7 @@
         }
     },
     "folders": {
-        "profiles": "config/profiles",
+        "profiles": "{{ folders_profiles }}",
         "resources": "resources",
         "skins": "resources/style"
     },
